@@ -1,3 +1,10 @@
+2008-05-02  Ben Van Mechelen  <me@benvm.be>
+
+	* garmon/obd_device.py:
+	    don't try to determine the data type in port_io_watch_cb,
+	    only: SEARCHING, NO DATA, ?, etc
+	    
+
 2008-04-29  Ben Van Mechelen  <me@benvm.be>
 
 	* garmon/prefs.py:
